[package]
name = "bosh-rs"
version = "0.1.0"
edition = "2021"
authors = ["deanveloper"]
description = "A highly customizable physics engine for the game Line Rider"
repository = "https://github.com/deanveloper/bosh-rs"
license = "MIT"
license-file = "LICENSE.md"
keywords = [
    "line-rider",
    "line",
    "rider",
    "physics"
]
categories = [
    "game-development",
    "games"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
